// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get 1`] = `
Array [
  Array [
    "key",
  ],
]
`;

exports[`getQueueLength 1`] = `
Array [
  Array [
    "key",
  ],
]
`;

exports[`hashDelete 1`] = `
Array [
  Array [
    "key",
    "field",
  ],
]
`;

exports[`hashDeleteAll 1`] = `
Array [
  Array [
    "key",
  ],
]
`;

exports[`hashGet 1`] = `
Array [
  Array [
    "key",
    "field",
  ],
]
`;

exports[`hashGetAll 1`] = `
Array [
  Array [
    "key",
  ],
]
`;

exports[`hashMultiGet 1`] = `
Array [
  Array [
    "key",
    "field",
  ],
]
`;

exports[`hashSet 1`] = `
Array [
  Array [
    "key",
    "field",
    "value",
  ],
]
`;

exports[`increment 1`] = `
Array [
  Array [
    "key",
  ],
]
`;

exports[`init 1`] = `
Array [
  Array [
    "message",
    [Function],
  ],
  Array [
    "pmessage",
    [Function],
  ],
]
`;

exports[`init 2`] = `
Array [
  Array [
    "channel",
    "message",
  ],
  Array [
    "channel",
    "message",
    "pattern",
  ],
]
`;

exports[`onMessage orderBooks 1`] = `
Array [
  Array [
    "orderBooks|any",
    "test",
  ],
]
`;

exports[`onMessage orders 1`] = `
Array [
  Array [
    "orders|any",
    "test",
  ],
]
`;

exports[`onMessage trades 1`] = `
Array [
  Array [
    "trades|any",
    "test",
  ],
]
`;

exports[`patternSubscribe 1`] = `
Array [
  Array [
    "channel",
  ],
]
`;

exports[`patternUnsubscribe 1`] = `
Array [
  Array [
    "channel",
  ],
]
`;

exports[`pop 1`] = `
Array [
  Array [
    "key",
  ],
]
`;

exports[`publish 1`] = `
Array [
  Array [
    "channel",
    "msg",
  ],
]
`;

exports[`push 1`] = `
Array [
  Array [
    "key",
    Array [
      "field",
    ],
  ],
]
`;

exports[`putBack 1`] = `
Array [
  Array [
    "key",
    Array [
      "field",
    ],
  ],
]
`;

exports[`set 1`] = `
Array [
  Array [
    "key",
    "value",
  ],
]
`;

exports[`subscribe 1`] = `
Array [
  Array [
    "channel",
  ],
]
`;

exports[`unsubscribe 1`] = `
Array [
  Array [
    "channel",
  ],
]
`;
